css/hyp3e.css
/* ... */
.no-bonus {
  color: rgba(0, 0, 0, 0.2);
}

/* Character Combat-tab styles */
.hyp3e .combat-block {
  padding: 0 2px;
  margin-right: 5px;
  margin-bottom: 3px;
  /* background-color: aqua; */
}
.hyp3e .combat-block input {
  text-align: center;
  min-width: 20px;
  max-width: 50px;
  margin-bottom: 2px;
}
/* .hyp3e .combat-block .class-weapons {
} */
.hyp3e .combat-block .class-weapons input {
  min-width: 200px;
  margin-bottom: 2px;
}
.hyp3e .combat-block .weapon-field {
  padding-left: 15px;
}
.hyp3e .combat-block .weapon-field input {
  min-width: 200px;
  margin-bottom: 2px;
}
.hyp3e .combat-header {
  font-weight: bold;
  font-size: large;
  padding: 5px 5px;
  /* background-color: blueviolet */
}
.hyp3e .combat-label {
  font-family: "Herculanum", sans-serif;
  font-weight: bold;
  padding: 5px 10px;
  /* background-color: dodgerblue; */
}
.hyp3e .saves-block {
  padding: 2px 2px;
  margin-bottom: 5px;
  /* background-color: aqua; */
}
.hyp3e .saves-block input {
  text-align: center;
  min-width: 20px;
  max-width: 50px;
}

/* Character Spells-tab styles */
.hyp3e .spells-block {
  padding: 0 5px;
  margin-right: 5px;
  /* background-color: aqua; */
}
.hyp3e .casting-ability {
  min-width: 190px;
}
.hyp3e .spells-label {
  font-family: "Herculanum", sans-serif;
  font-weight: bold;
  padding: 5px 5px;
  /* background-color: darkcyan; */
}
.hyp3e .spells input {
  text-align: center;
  max-width: 25px;
  margin-bottom: 2px;
}

/* Character Items-tab styles */
.hyp3e .money-block {
  padding: 0 2px;
  margin-right: 5px;
  margin-bottom: 3px;
  /* background-color: aqua; */
}
.hyp3e .money-block input {
  text-align: center;
  min-width: 20px;
  max-width: 80px;
  margin-bottom: 2px;
}
.hyp3e .money-block .editor {
  min-width: 400px;
}
.hyp3e .money-block .treasure-box {
  /* font-family: "Herculanum", sans-serif; */
  border: 2px groove #eeede0;
}

/* Character Description-tab styles */
.hyp3e .description-block {
  padding: 0 2px;
  margin-right: 5px;
}
.hyp3e .description-label {
  font-weight: bold;
  padding: 5px 5px;
  max-width: 135px;
  font-family: "Herculanum", sans-serif;
  /* background-color: aliceblue; */
}
.hyp3e .description-field input {
  min-width: 85px;
  margin-bottom: 2px;
}
.hyp3e .biography-block {
  padding: 0 2px;
  margin-right: 5px;
  /* font-family: "Herculanum", sans-serif; */
  height: 100%;
}
.hyp3e .biography-block .editor {
  height: 100%;
}

/* NPC sheet styles */
.hyp3e .npc-field {
  margin-left: 2px;
  margin-right: 2px;
  min-width: 75px;
  /* text-align: center; */
}
.hyp3e .small-label {
  font-family: "Herculanum", sans-serif;
  font-size: small;
  font-weight: bold;
}
.hyp3e .npc-stat-block {
  padding: 0 2px;
  margin-right: 5px;
  margin-bottom: 3px;
  min-width: 150px;
}
.hyp3e .npc-stat-block input {
  text-align: center;
  min-width: 50px;
  max-width: 75px;
  margin-bottom: 2px;
}
.hyp3e .npc-description-block {
  padding: 0 2px;
  margin-right: 5px;
  margin-left: 5px;
  min-width: 550px;
  height: 100%;
}
.hyp3e .npc-description-block .editor {
  height: 100%;
}


/* Custom dialog styles */
.hyp3e .dialog-label {
  font-weight: bold;
  padding: 5px 5px;
}

/* General resource-field styles */
.hyp3e .resource {
  padding: 0 2px;
  margin-right: 5px;
  /* background-color: aqua; */
}
.hyp3e .resource-header {
  font-weight: bold;
  font-size: large;
  padding: 5px 5px;
  /* background-color: blueviolet */
}
.hyp3e .resource-label {
  font-family: "Herculanum", sans-serif;
  font-weight: bold;
  padding: 5px 5px;
  /* background-color: darkcyan; */
}

/* Character "Items" includes the Class Abilities list, Weapons & Armor lists, 
  Spells list, Items (inventory) list, and Effects list */
.hyp3e .items-header {
  height: 28px;
  margin: 2px 0;
  padding: 0;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(0, 0, 0, 0.05);
  border: 2px groove #eeede0;
  font-family: "Herculanum", sans-serif;
  font-weight: bold;
}
.hyp3e .items-header > * {
  font-size: 14px;
  text-align: center;
}
.hyp3e .items-header .item-name {
  font-weight: bold;
  padding-left: 5px;
  text-align: left;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}
.hyp3e .items-list {
  list-style: none;
  margin: 0;
  padding: 0;
  overflow-y: auto;
  scrollbar-width: thin;
  color: #444;
}
.hyp3e .items-list .item-list {
  list-style: none;
  margin: 0;
  padding: 0;
}
.hyp3e .items-list .item-name {
  -webkit-box-flex: 2;
  -ms-flex: 2;
  flex: 2;
  margin: 0;
  overflow: hidden;
  font-size: 13px;
  text-align: left;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}
.hyp3e .items-list .item-name h3, .hyp3e .items-list .item-name h4 {
  /* font-family: "Herculanum", sans-serif; */
  margin: 0;
  white-space: nowrap;
  overflow-x: hidden;
}
.hyp3e .items-list .item-controls {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -ms-flex: 0 0 100px;
  flex: 0 0 100px;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  .item-unequipped {
    color: rgba(0, 0, 0, 0.2);
  }
}
.hyp3e .items-list .item-controls a {
  font-size: 12px;
  text-align: center;
  margin: 0 6px;
}
.hyp3e .items-list .item {
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 2px;
  border-bottom: 1px solid #c9c7b8;
}
.hyp3e .items-list .item:last-child {
  border-bottom: none;
}
.hyp3e .items-list .item .item-name {
  color: #191813;
}
.hyp3e .contained-items {
  padding-left: 15px;
}
.hyp3e .items-list .item .item-name .item-image {
  -webkit-box-flex: 0;
  -ms-flex: 0 0 30px;
  flex: 0 0 30px;
  height: 30px;
  background-size: 30px;
  border: none;
  margin-right: 5px;
  img {
    border: none;
  }
  .rollable img:hover {
    content: url("/icons/svg/d20-black.svg");
  }
}
/* ... */

